# python-impressionador

./: .gitignore  README.md
ArquivosAula/: Cartilha - Métodos de Dicionários.ipynb
codigos/: 1.  Input - Pegando informações do Usuário .ipynb  11. Indice e Tamanho de String.ipynb  18. Listas 02.ipynb  (+68 more)
codigos/Módulo 29 de 58 - Web-Scraping com Selenium/web-scraping/: Aula 02 - Instalação do Selenium_ajustada.ipynb  Aula 3.ipynb  Aula 4 - ID.ipynb  Aula 5 - CLASS_NAME, XPATH.ipynb  Aula 6 - TAG NAME, PARTIAL_LINK_TEXT.ipynb  Aula 7 - Selecionando Elementos Selenium.ipynb  Aula 8 - Elementos dentro de elementos.ipynb  Aula 9 - Preenchendo Formularios-checkpoint.ipynb  Portal _ Hashtag Treinamentos.html  TESTE_KML.ipynb  comandos.txt  pyproject.toml
codigos/Módulo 29 de 58 - Web-Scraping com Selenium/web-scraping/.ipynb_checkpoints/: Aula 02 - Instalação do Selenium_ajustada-checkpoint.ipynb  Aula 8 - Elementos dentro de elementos-checkpoint.ipynb
codigos/Módulo 29 de 58 - Web-Scraping com Selenium/web-scraping/Portal _ Hashtag Treinamentos_files/: 1010468942453150  853903311.html  css  destination  dynamic.js.download  f.txt  gtm.js.download  js  run.css  run.js.download  script.js.download  static.js.download
codigos/Módulo 29 de 58 - Web-Scraping com Selenium/web-scraping/web_scraping/: __init__.py
codigos/Módulo 33 de 60 Integração Python com APIs e JSON/Criação_de_REST_API/: Mentoria REST API-Copy1.ipynb  pyproject.toml
codigos/Módulo 33 de 60 Integração Python com APIs e JSON/Criação_de_REST_API/.ipynb_checkpoints/: Mentoria REST API-checkpoint.ipynb
(+89 files in other folders)
